@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <screens>
     <screen file_name="ui/screens/start_menu.xml" />
+    <screen file_name="ui/screens/test.xml" />
 </screens>
