@@ -1,0 +1,6 @@
+<screen name="TestScreen" script="ui/screens/test.lua">
+    <widget name="Right" colour="1 1 1 1" align="right" valign="top" x="-100" y="5%" width="100" height="90%" />
+    <widget name="Left" colour="1 1 1 1" align="left" valign="top" x="0" y="5%" width="100" height="90%">
+        <widget name="LeftRow1" colour="0 1 0 1" align="center" valign="top" x="-10" y="10" width="20" height="10" />
+    </widget>
+</screen>
